--- a/Navigator Tool bar Multiple Screen/Base.lproj/Main.storyboard
+++ b/Navigator Tool bar Multiple Screen/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,7 +18,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P4t-8S-sj1">
@@ -27,19 +27,35 @@
                                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
                                     <navigationItem title="First Screen" id="aqq-9V-I79">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="oaK-Zq-fIa"/>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="fastForward" id="pCl-50-SM3"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="oaK-Zq-fIa">
+                                            <connections>
+                                                <action selector="decreaseNumber:" destination="BYZ-38-t0r" id="6i7-Ea-nQF"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="fastForward" id="pCl-50-SM3">
+                                            <connections>
+                                                <action selector="increaseNumber:" destination="BYZ-38-t0r" id="4yY-K6-d7d"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8MP-8V-VvJ">
-                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <barButtonItem image="ic_home.png" id="zVT-kO-nJe"/>
+                                    <barButtonItem image="ic_home.png" id="zVT-kO-nJe">
+                                        <connections>
+                                            <action selector="homeNumber:" destination="BYZ-38-t0r" id="oOZ-tO-uSg"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="L9C-8g-c8h"/>
-                                    <barButtonItem systemItem="search" id="4lQ-5g-3j4"/>
+                                    <barButtonItem systemItem="search" id="4lQ-5g-3j4">
+                                        <connections>
+                                            <segue destination="BfU-Td-1Ha" kind="show" id="9ll-SA-IVa"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="gQA-dF-XQI"/>
                                     <barButtonItem systemItem="reply" id="eXw-Uu-XMX"/>
                                 </items>
@@ -54,10 +70,31 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="numberLabel" destination="2Xh-3b-kBZ" id="lt7-cd-dwr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5.625" y="9.5070422535211261"/>
+            <point key="canvasLocation" x="-392" y="-116"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="7ZQ-Jh-fIX">
+            <objects>
+                <viewController id="BfU-Td-1Ha" customClass="SecondViewController" customModule="Navigator_Tool_bar_Multiple_Screen" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HvY-Ws-Ecf"/>
+                        <viewControllerLayoutGuide type="bottom" id="f8q-Lk-03Z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KKo-tr-1IW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rer-0O-YTj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="347" y="-116"/>
         </scene>
     </scenes>
     <resources>
